# GNSS-receiver-imitator

./: CMakeLists.txt  Models.txt  dialog.cpp  dialog.h  dialog.ui  gnsswindow.cpp  gnsswindow.h  gnsswindow.ui  main.cpp  test_log.txt  ubxdefs.h  ubxparser.cpp  ubxparser.h
translations/: gnss_simulator_ru.ts
